Update to File operations for macbook