@@ -1,5 +1,7 @@
 package com.cigniti.util;
 
+import java.io.File;
+
 public class FileOperations {
 	
 	public static void openFileinNotepad(String strFileName)
@@ -7,8 +9,22 @@ public class FileOperations {
 		
 		try {
 			
-			String cmds[] = new String[] { "cmd", "/c ","start","/max", "notepad", strFileName};
-            Runtime.getRuntime().exec(cmds);
+			String strStartCommand = "";
+    		if(System.getProperty("os.name").contains("Windows"))
+    		{
+    			strStartCommand = "cmd /c start /max notepad";
+    			String command = strStartCommand + strFileName;
+    			Runtime rt = Runtime.getRuntime();
+    			Process pr = rt.exec(command);
+    			
+    		}
+    		else if(System.getProperty("os.name").contains("Mac"))
+    		{
+    			strStartCommand = "/usr/bin/open";
+    			Runtime.getRuntime().exec(new String[]{strStartCommand,strFileName});
+    			
+    		}
+    		
             
 		}
 		catch(Exception e)
